[package]
name = "quaigh"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

authors = ["Gabriel Gouvine <gabriel.gouvine_cargo@m4x.org>"]
description = "Logic optimization library"
license = "MIT OR Apache-2.0"
keywords = ["logic-optimization", "AIG", "ATPG", "EDA"]
repository = "https://github.com/Coloquinte/quaigh"
homepage = "https://github.com/Coloquinte/quaigh"
categories = ["mathematics", "algorithms"]

[dependencies]
cat_solver = "3.1.1"
volute = "1.1.3"
clap = { version = "4.4", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
itertools = "0.12.0"
fxhash = "0.2.1"
kdam = { version = "0.5", features = ["template"] }

