[package]
name = "quaigh"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

authors = ["Gabriel Gouvine <gabriel.gouvine_cargo@m4x.org>"]
description = "Logic optimization library"
license = "MIT OR Apache-2.0"
keywords = ["logic-optimization", "AIG", "ATPG", "EDA"]
repository = "https://github.com/Coloquinte/quaigh"
homepage = "https://github.com/Coloquinte/quaigh"
categories = ["mathematics", "algorithms"]

[dependencies]
rustsat-kissat = "0.7"
rustsat = "0.7"
volute = "1.2"
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.9", features = ["small_rng"] }
itertools = "0.14"
fxhash = "0.2.1"
kdam = { version = "0.6", features = ["template"] }

